fix: horizontal scrollbar card stack icons

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 
 ::-webkit-scrollbar {
   width: 8px;
+  height: 2px;
 }
 
 ::-webkit-scrollbar-track {
@@ -31,11 +32,7 @@
 }
 
 
-// Cards x scrollbar
-.hide-scrollbar ::-webkit-scrollbar {
-  width: 2px;
-  height: 2px;
-}
+/* Cards scrollbar */
 
 .hide-scrollbar ::-webkit-scrollbar-track {
   background: theme(colors.light);
@@ -43,7 +40,7 @@
 
 
 .hide-scrollbar ::-webkit-scrollbar-thumb {
-  background: theme(colors.light);
+  background: theme(colors.opaclight);
 }
 
 
@@ -56,7 +53,7 @@
 }
 
 .dark .hide-scrollbar ::-webkit-scrollbar-thumb {
-  background: theme(colors.dark);
+  background: theme(colors.opacdark);
 }
 
 .dark .hide-scrollbar ::-webkit-scrollbar-thumb:hover {
